BZ#14317: Optimze __xpg_strerror_r

[BZ #14317]
* string/xpg-strerror.c (__xpg_strerror_r): Optimize, call
strlen only if needed.